# gestao-pro-empresarial

./: .env  .gitignore  bun.lockb  package-lock.json  package.json  vite.config.desktop.ts
.github/workflows/: desktop-release.yml
.lovable/: arquitetura-rede-local.md  desktop-piloto.md  desktop-release.md  offline-first-overview.md  plan-financeiro-local.md  plan-onda3.md  plan.md  qa-onda3.md
docs/: AUDITORIA-OFFLINE-FIRST.md  auditoria-offline.md  testes-offline-pdv.md
public/: site.webmanifest
scripts/: build-desktop.mjs  generate-latest-json.mjs  inspect_payloads.py  normalize-tauri-release-assets.mjs  prepare-tauri-dist.mjs  query_local_db.py  release-desktop.mjs  run-tauri-build-watchdog.ps1  validate-latest-json.mjs  validate-public-env.mjs  verify-updater-signature.mjs
src/: routeTree.gen.ts  router.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  db.rs  event_bus.rs  lib.rs  local_server.rs  main.rs  mdns_discovery.rs  printers.rs
src-tauri/src/db/: helpers.rs  mod.rs
src/components/admin/: EmpresaDialog.tsx  MasterContextProvider.tsx  MasterLayout.tsx  MasterSidebar.tsx  MasterTopbar.tsx  RequireNotMaster.tsx  RequireSuperAdmin.tsx  StatusBadges.tsx
src/contexts/: PdvQuickAccessContext.tsx
src/hooks/: useAdmin.ts  useAppUpdate.ts  useAuditoriaRateio.ts  useAutoSync.ts  useAutorizacoes.ts  useBalancaConfig.ts  useCaixa.ts  useClientes.ts  useCobrancaPendente.ts  useCompras.ts  useConfigEmpresa.ts  useDashboard.ts  useDesktopBootstrap.ts  useDomainInvalidation.ts  useEmpresa.ts  useEstoque.ts  useFiadoPorCliente.ts  useFinanceiroIndicadores.ts  useFinanceiroResultadoReal.ts  useFinanceiroSecoes.ts  useFornecedores.ts  useFuncionarios.ts  useGlobalLocalServerWatchdog.ts  useHotkeys.ts  useIfoodRepasses.ts  useLocalRealtime.ts  useLocalServerWatchdog.ts  useLotes.ts  useModalKeyboardNavigation.ts  useNetworkStatus.ts  useNotificacoes.ts  useOfflineReadiness.ts  useOfflineStockHealth.ts  useOutboxPendingSummary.ts  useProdutoCodigo.ts  useProdutoPorPlu.ts  useProdutos.ts  useQa.ts  useRealtimeSync.ts  useSaasAdmin.ts  (+8 more)
src/lib/: balanca.ts  barcode.ts  buscaExternaProduto.ts  configEmpresaOfflineCache.ts  cupom-escpos.ts  cupom-print.ts  cupom.ts  dashboard-financeiro-kpis.ts  dashboard-lucro-bruto.ts  date-format.ts  date-ms.ts  dateRange.ts  desktop-save.ts  desktopErrorLogger.ts  documento.ts  erpOfflineCache.ts  erpUnlock.ts  export-bloco.ts  export-csv.ts  export-empresa-header.ts  export-png-canvas.ts  export-png-theme.ts  export-qa.ts  export-relatorio-card.ts  financeiro-canonico.test.ts  financeiro-canonico.ts  financeiro-local.ts  mock-data.ts  operadorOfflineCache.ts  parcelamento-fiado.test.ts  parcelamento-fiado.ts  pix.ts  planStatus.ts  runtimeMode.ts  softDeleteError.ts  tauriUpdater.test.ts  tauriUpdater.ts  version.ts  withTimeout.ts
src/routes/: __root.tsx  admin.assinaturas.tsx  admin.auditoria.tsx  admin.config-comercial.tsx  admin.empresas.tsx  admin.estatisticas.tsx  admin.index.tsx  admin.modos.tsx  admin.modulos.tsx  admin.pagamentos.tsx  admin.planos.tsx  admin.qa.tsx  admin.reajustes.tsx  admin.tsx  admin.usuarios.tsx  auth.tsx  autorizacoes.historico.tsx  caixa.tsx  clientes.tsx  cobrancas.tsx  cobrancas.whatsapp-logs.tsx  compras.tsx  configuracoes.tsx  estoque.tsx  etiquetas.tsx  fiado.tsx  financeiro.tsx  fornecedores.tsx  hub.tsx  index.tsx  modulos.tsx  pdv.tsx  planos.tsx  pos.tsx  produtos-vendidos.tsx  produtos.tsx  relatorios.caixa.tsx  relatorios.compras.tsx  relatorios.contas-receber.tsx  relatorios.dre.tsx  (+8 more)
src/server/: cobrancas.functions.ts
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260422160312_98fdc60a-60bc-452e-8332-c6384dadc694.sql  20260422160518_a5076525-6c90-45c4-9c53-075608e44401.sql  20260422161222_88b383da-5d0d-4aed-a3e2-482501fe60bd.sql  20260422162416_19bafa23-be40-418f-ba5d-70446ba4509f.sql  20260422162504_4203c0e7-ffd3-4696-8d7d-e0a83c3ace5f.sql  20260422163221_73655ea8-6383-4861-a147-cda24cbf7dc4.sql  20260422170936_e8de9dec-789c-4ad8-ae12-ee8fa0549a99.sql  20260422172907_99688b9c-adaa-43e0-9ce2-5edb17b1d653.sql  20260422173357_5de75541-5f74-41ed-aeea-2a9317ea4491.sql  20260422174017_a15bd1c2-1982-4100-ac80-006a90082e77.sql  20260422174526_f74f0436-976f-4d7d-a96a-86b9d6d4a73c.sql  20260422191759_ae602342-9d07-460b-9597-7c0e554c899f.sql  20260422192821_bba09628-2ae0-4c0d-b328-3eac4a5628b3.sql  20260422192908_8d04ee30-5011-4b4d-95f8-33d849e34c11.sql  20260422194027_f370d570-1111-4574-9bf2-327fdcbcdb2a.sql  20260422195926_e01d061c-c330-48b7-908d-a8e0dba942d2.sql  20260422203050_849559e2-2bae-4036-8772-8c84670d8c42.sql  20260422204359_22a44721-5dff-49c3-8eae-013fcd7a714c.sql  20260422204518_3adc48df-6dd3-4c13-a576-93452866df6a.sql  20260422205819_8c90bcd7-0725-4217-b11d-2f303be73f03.sql  20260422210601_bb1ac84c-1b6a-4d3b-adf3-4fb6589a6efc.sql  20260422210703_497850d0-5340-49f6-87ec-150817164689.sql  20260422211223_b8faed27-7ba1-498d-a63d-71b54c7b2ebc.sql  20260422234731_703676d5-4e0e-427a-a47d-de4c46fc85a5.sql  20260423000157_9e458108-9357-4d68-9f76-be1d07128fa3.sql  20260423002435_1dfabec3-95b8-44ed-a08c-5066ce978913.sql  20260423004734_453414fc-c0fe-47c0-80ba-114953bbef8c.sql  20260423014631_00971720-1877-43eb-b681-6ee1348ba504.sql  20260423014922_c0e5f528-4ad7-4e1a-b5b0-2efd07ed37df.sql  20260423023651_ea794c84-3e3b-4902-8e36-b2812ef8c98f.sql  20260423030904_4c42ed7b-c49a-467b-b7bc-3423d41449b8.sql  20260423033327_57fdfda9-c7fe-4e8f-9a12-6f0f1de53cc8.sql  20260423035137_bdc4e5f3-bce5-4b46-bcdd-e35ba6315fee.sql  20260426165928_4708ecc4-a91d-444b-a72c-f3736afa36c2.sql  20260426170047_36edefa1-8b6f-49f4-bc32-24e5a0310872.sql  20260426170142_a3ae26a1-f5ed-44ae-b321-63d89785263e.sql  20260426170900_5abe6fd1-3e4a-413c-b7b3-9510d8c476f9.sql  20260426180612_f3b7ae3e-260b-4aeb-a011-fa02e8b1910f.sql  20260426204116_fd5e1f77-91e4-40a9-900e-049185c3e8d7.sql  20260426210403_bf5395e0-6649-4f67-89d0-d446c998685a.sql  (+55 more)
(+198 files in other folders)
