[package]
name = "gestao-pro"
version = "1.1.17"
description = "Gestão Pro — sistema de gestão empresarial"
authors = ["AlexPro Apps"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gestao_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Backend HTTP local (Servidor Local)
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "signal", "time"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hostname = "0.4"

# Banco local (SQLite embutido) — inicia a camada de persistência local real.
# `bundled` evita depender do SQLite do sistema; gera build self-contained.
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.14"
dirs = "5"

# Decodificação de PNG para impressão GDI de etiquetas (PT260 e drivers Windows
# genéricos que não aceitam RAW/ESC-POS). Apenas PNG para manter binário enxuto.
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows: WinAPI usada para impressão RAW (ESC/POS) e fallback ShellExecute
# "printto" — substitui a dependência de PowerShell/Start-Process.
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winspool",
    "shellapi",
    "winuser",
    "wingdi",
    "minwindef",
    "winnt",
    "handleapi",
    "errhandlingapi",
] }

[profile.release]
# LTO completo + codegen-units=1 estavam causando STATUS_ACCESS_VIOLATION
# (crash do rustc/link) no Windows MSVC. "thin" mantém binário pequeno
# sem estourar o linker.
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true
incremental = false
